# molpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
cmake/: MolppConfig.cmake.in
include/: Atom.hpp  AtomSel.hpp  CMakeLists.txt  ElementsTable.hpp  MolError.hpp  MolSystem.hpp  Residue.hpp
include/internal/: BaseSel.hpp
include/molpp/: Atom.hpp  AtomSel.hpp  AtomSelector.hpp  Bond.hpp  ElementsTable.hpp  MolSystem.hpp  Molpp  MolppCore.hpp  Property.hpp  Residue.hpp  ResidueSel.hpp  Timestep.hpp  Trajectory.hpp
include/molpp/internal/: AtomAggregate.hpp  AtomData.hpp  BaseAtomAggregate.hpp  BaseSel.hpp  BondData.hpp  MolData.hpp  PropertyContainer.hpp  PropertyTrajectory.hpp  ResidueData.hpp  Sel.hpp  SelIndex.hpp  VectorView.hpp  requirements.hpp
include/molpp/tools/: Graph.hpp  SimpleGraph.hpp  iterators.hpp
scripts/: elements_table.py  residues.py
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt
src/analysis/dssp/: CMakeLists.txt  DSSP.cpp  DSSP.hpp  structure.cpp  structure.hpp
src/core/: Atom.cpp  AtomData.cpp  AtomData.hpp  AtomProperties.hpp  AtomSel.cpp  BaseAtomAggregate.cpp  BaseSel.cpp  BondData.cpp  BondData.hpp  BondGraph.cpp  BondGraph.hpp  CMakeLists.txt  MolData.cpp  MolData.hpp  MolSystem.cpp  PropertyContainer.cpp  PropertyContainer.hpp  PropertyTrajectory.cpp  PropertyTrajectory.hpp  Residue.cpp  ResidueData.hpp  ResidueSel.cpp  SelIndex.cpp  Timestep.cpp  Timestep.hpp  TrajData.hpp
src/guessers/: AtomBondGuesser.cpp  AtomBondGuesser.hpp  CMakeLists.txt  ResidueBondGuesser.cpp  ResidueBondGuesser.hpp
src/readers/: CMakeLists.txt  MolReader.cpp  MolReader.hpp  MolfileReader.cpp  MolfileReader.hpp  ResidueDetect.hpp  molfile.h
src/selections/: AtomSelector.cpp  CMakeLists.txt  SelectionNode.hpp  SelectionParser.cpp  SelectionParser.hpp  SelectionStack.cpp  SelectionStack.hpp  boolean.cpp  boolean.hpp  numbers.hpp  properties.cpp  properties.hpp  selections.cpp  selections.hpp
src/tables/: CMakeLists.txt  ElementsTable.cpp  ResiduesTable.cpp  ResiduesTable.hpp
src/tools/: CMakeLists.txt  Graph.hpp  SpatialSearch.cpp  SpatialSearch.hpp  algorithms.hpp  iterators.hpp  math.hpp
tests/: CMakeLists.txt  analysis.cpp  atomaggregates.cpp  atoms.cpp  auxiliary.cpp  auxiliary.hpp  bonds.cpp  dssp.cpp  files.cpp  files.hpp  matchers.hpp  readers.cpp  residues.cpp  selections.cpp  selectors.cpp  system.cpp  tables.cpp  test_Atom.cpp  test_AtomAggregate.cpp  test_BreadthFirstTraversal.cpp  test_ConnectedComponents.cpp  test_Graph.cpp  test_MolData.cpp  test_MolfileReader.cpp  test_Property.cpp  test_PropertyContainer.cpp  test_PropertyTrajectory.cpp  test_SimpleGraph.cpp  test_auxiliary.cpp  tools.cpp
tests/datafiles/: dipeptide.psf  dipeptide.xtc  fluorobenzene.mol2
